Replace Java 9 dependencies with Java 8 compatible code.